Source/ISS/Development/PawsSupport/Devices/Bus_1553/Atlas/Remote PC test software/Include/BTICSDBNET.VB

        Public Declare Function BTICSDB_CmdRd Lib "BTICSDB64.DLL" Alias "BTICSDB_CmdRd" (ByVal block As UInt16(), ByVal addrval As UInt32, ByVal handleval As IntPtr) As Int32
        Public Declare Sub BTICSDB_CmdRestart Lib "BTICSDB64.DLL" Alias "BTICSDB_CmdRestart" (ByVal channum As Int32, ByVal handleval As IntPtr)
        Public Declare Function BTICSDB_CmdShotWr Lib "BTICSDB64.DLL" Alias "BTICSDB_CmdShotWr" (ByVal value As Int32, ByVal index As Int32, ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTICSDB_CmdSkipWr Lib "BTICSDB64.DLL" Alias "BTICSDB_CmdSkipWr" (ByVal value As Int32, ByVal index As Int32, ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Sub BTICSDB_CmdStackClr Lib "BTICSDB64.DLL" Alias "BTICSDB_CmdStackClr" (ByVal channum As Int32, ByVal handleval As IntPtr)
        Public Declare Function BTICSDB_CmdStartRd Lib "BTICSDB64.DLL" Alias "BTICSDB_CmdStartRd" (ByVal channum As Int32, ByVal handleval As IntPtr) As UInt16
        Public Declare Sub BTICSDB_CmdStartWr Lib "BTICSDB64.DLL" Alias "BTICSDB_CmdStartWr" (ByVal addrval As UInt16, ByVal channum As Int32, ByVal handleval As IntPtr)
        Public Declare Function BTICSDB_CmdStepWr Lib "BTICSDB64.DLL" Alias "BTICSDB_CmdStepWr" (ByVal value As Int32, ByVal index As Int32, ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTICSDB_CmdTotalRd Lib "BTICSDB64.DLL" Alias "BTICSDB_CmdTotalRd" (ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Sub BTICSDB_CmdTotalWr Lib "BTICSDB64.DLL" Alias "BTICSDB_CmdTotalWr" (ByVal countval As Int32, ByVal channum As Int32, ByVal handleval As IntPtr)
        Public Declare Function BTICSDB_CmdWr Lib "BTICSDB64.DLL" Alias "BTICSDB_CmdWr" (ByVal block As UInt16(), ByVal addrval As UInt32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTICSDB_DllUsageCount Lib "BTICSDB64.DLL" Alias "BTICSDB_DllUsageCount" () As Int32
        Public Declare Function BTICSDB_FilterAddr Lib "BTICSDB64.DLL" Alias "BTICSDB_FilterAddr" (ByVal addrval As Int32, ByVal sival As Int32, ByVal channum As Int32, ByVal handleval As IntPtr) As UInt32
        Public Declare Function BTICSDB_FilterCreate Lib "BTICSDB64.DLL" Alias "BTICSDB_FilterCreate" (ByVal handleval As IntPtr) As UInt32
        Public Declare Function BTICSDB_FilterFill Lib "BTICSDB64.DLL" Alias "BTICSDB_FilterFill" (ByVal msgaddr As UInt32, ByVal basevaladdr As UInt32, ByVal handleval As IntPtr) As Int32
        Public Declare Sub BTICSDB_GetChanCount Lib "BTICSDB64.DLL" Alias "BTICSDB_GetChanCount" (ByRef rcvcount As Int32, ByRef xmtcount As Int32, ByVal handleval As IntPtr)
        Public Declare Function BTICSDB_IsChan Lib "BTICSDB64.DLL" Alias "BTICSDB_IsChan" (ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTICSDB_IsRcvChan Lib "BTICSDB64.DLL" Alias "BTICSDB_IsRcvChan" (ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTICSDB_IsXmtChan Lib "BTICSDB64.DLL" Alias "BTICSDB_IsXmtChan" (ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTICSDB_ListAddr Lib "BTICSDB64.DLL" Alias "BTICSDB_ListAddr" (ByVal index As Int32, ByVal listaddr As UInt32, ByVal handleval As IntPtr) As UInt32
        Public Declare Function BTICSDB_ListAddrEx Lib "BTICSDB64.DLL" Alias "BTICSDB_ListAddrEx" (ByVal index As Int32, ByVal listaddr As UInt32, ByVal header As UInt16(), ByVal handleval As IntPtr) As UInt32
        Public Declare Function BTICSDB_ListAdvance Lib "BTICSDB64.DLL" Alias "BTICSDB_ListAdvance" (ByVal listaddr As UInt32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTICSDB_ListClear Lib "BTICSDB64.DLL" Alias "BTICSDB_ListClear" (ByVal listaddr As UInt32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTICSDB_ListConfig Lib "BTICSDB64.DLL" Alias "BTICSDB_ListConfig" (ByVal configval As UInt32, ByVal count As Int32, ByVal handleval As IntPtr) As UInt32
        Public Declare Function BTICSDB_ListConfigEx Lib "BTICSDB64.DLL" Alias "BTICSDB_ListConfigEx" (ByVal configval As UInt32, ByVal count As Int32, ByVal handleval As IntPtr) As UInt32
        Public Declare Function BTICSDB_ListDataRdEx Lib "BTICSDB64.DLL" Alias "BTICSDB_ListDataRdEx" (ByVal buf As Byte(), ByVal count As Int32, ByVal index As Int32, ByVal listaddr As UInt32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTICSDB_ListDataWrEx Lib "BTICSDB64.DLL" Alias "BTICSDB_ListDataWrEx" (ByVal buf As Byte(), ByVal count As Int32, ByVal index As Int32, ByVal listaddr As UInt32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTICSDB_ListInit Lib "BTICSDB64.DLL" Alias "BTICSDB_ListInit" (ByVal listaddr As UInt32, ByVal msgaddr As UInt32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTICSDB_ListNextRd Lib "BTICSDB64.DLL" Alias "BTICSDB_ListNextRd" (ByVal listaddr As UInt32, ByVal header As UInt16(), ByVal handleval As IntPtr) As UInt32
        Public Declare Function BTICSDB_ListNextWr Lib "BTICSDB64.DLL" Alias "BTICSDB_ListNextWr" (ByVal listaddr As UInt32, ByVal header As UInt16(), ByVal handleval As IntPtr) As UInt32
        Public Declare Sub BTICSDB_ListPostRd Lib "BTICSDB64.DLL" Alias "BTICSDB_ListPostRd" (ByVal listaddr As UInt32, ByVal header As UInt16(), ByVal handleval As IntPtr)
        Public Declare Sub BTICSDB_ListPostWr Lib "BTICSDB64.DLL" Alias "BTICSDB_ListPostWr" (ByVal listaddr As UInt32, ByVal header As UInt16(), ByVal handleval As IntPtr)
        Public Declare Sub BTICSDB_ListPreRd Lib "BTICSDB64.DLL" Alias "BTICSDB_ListPreRd" (ByVal listaddr As UInt32, ByVal header As UInt16(), ByVal handleval As IntPtr)
        Public Declare Sub BTICSDB_ListPreWr Lib "BTICSDB64.DLL" Alias "BTICSDB_ListPreWr" (ByVal listaddr As UInt32, ByVal header As UInt16(), ByVal handleval As IntPtr)
        Public Declare Function BTICSDB_MsgActivityRd Lib "BTICSDB64.DLL" Alias "BTICSDB_MsgActivityRd" (ByVal msgaddr As UInt32, ByVal handleval As IntPtr) As UInt16
        Public Declare Sub BTICSDB_MsgActivityWr Lib "BTICSDB64.DLL" Alias "BTICSDB_MsgActivityWr" (ByVal value As UInt16, ByVal msgaddr As UInt32, ByVal handleval As IntPtr)
        Public Declare Function BTICSDB_MsgCheck Lib "BTICSDB64.DLL" Alias "BTICSDB_MsgCheck" (ByVal msgaddr As UInt32, ByVal handleval As IntPtr) As UInt16
        Public Declare Function BTICSDB_MsgCommRd Lib "BTICSDB64.DLL" Alias "BTICSDB_MsgCommRd" (ByRef msgfields As MSGFIELDSCSDB, ByVal msgaddr As UInt32, ByVal handleval As IntPtr) As UInt32
        Public Declare Function BTICSDB_MsgCommWr Lib "BTICSDB64.DLL" Alias "BTICSDB_MsgCommWr" (ByRef msgfields As MSGFIELDSCSDB, ByVal msgaddr As UInt32, ByVal handleval As IntPtr) As UInt32
        Public Declare Function BTICSDB_MsgConfig Lib "BTICSDB64.DLL" Alias "BTICSDB_MsgConfig" (ByVal configval As UInt32, ByVal count As Int32, ByVal msgaddr As UInt32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTICSDB_MsgCreateEx Lib "BTICSDB64.DLL" Alias "BTICSDB_MsgCreateEx" (ByVal configval As UInt32, ByVal count As Int32, ByVal handleval As IntPtr) As UInt32
        Public Declare Function BTICSDB_MsgFieldRd Lib "BTICSDB64.DLL" Alias "BTICSDB_MsgFieldRd" (ByVal fieldtype As Int32, ByVal msgaddr As UInt32, ByVal handleval As IntPtr) As UInt32
        Public Declare Function BTICSDB_MsgFieldWr Lib "BTICSDB64.DLL" Alias "BTICSDB_MsgFieldWr" (ByVal fieldval As UInt32, ByVal fieldtype As Int32, ByVal msgaddr As UInt32, ByVal handleval As IntPtr) As UInt32
        Public Declare Function BTICSDB_MsgOptRd Lib "BTICSDB64.DLL" Alias "BTICSDB_MsgOptRd" (ByVal msgaddr As UInt32, ByVal handleval As IntPtr) As UInt16
        Public Declare Sub BTICSDB_MsgOptWr Lib "BTICSDB64.DLL" Alias "BTICSDB_MsgOptWr" (ByVal msgopt As UInt16, ByVal msgaddr As UInt32, ByVal handleval As IntPtr)
        Public Declare Function BTICSDB_MsgReset Lib "BTICSDB64.DLL" Alias "BTICSDB_MsgReset" (ByVal msgaddr As UInt32, ByVal handleval As IntPtr) As UInt32
        Public Declare Function BTICSDB_SchedAgain Lib "BTICSDB64.DLL" Alias "BTICSDB_SchedAgain" (ByVal index As Int32, ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTICSDB_SchedBranchEx Lib "BTICSDB64.DLL" Alias "BTICSDB_SchedBranchEx" (ByVal condition1 As UInt16, ByVal condition2 As UInt16, ByVal destindex As Int32, ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTICSDB_SchedBuildEx Lib "BTICSDB64.DLL" Alias "BTICSDB_SchedBuildEx" (ByVal nummsgs As Int32, ByVal msgs As UInt32(), ByVal freq As Int32(), ByVal interblockgap As Int32, ByVal rsvdblocks As Int32, ByVal bitrate As Int32, ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTICSDB_SchedBuildExx Lib "BTICSDB64.DLL" Alias "BTICSDB_SchedBuildExx" (ByVal nummsgs As Int32, ByVal msgs As UInt32(), ByVal freq As Int32(), ByVal interblockgap As Int32, ByVal rsvdblocks As Int32, ByVal bitrate As Int32, ByVal buf As IntPtr, ByVal bufsize As UInt32, ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTICSDB_SchedCallEx Lib "BTICSDB64.DLL" Alias "BTICSDB_SchedCallEx" (ByVal condition1 As UInt16, ByVal condition2 As UInt16, ByVal destindex As Int32, ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTICSDB_SchedGCD Lib "BTICSDB64.DLL" Alias "BTICSDB_SchedGCD" (ByVal a As Int32, ByVal b As Int32) As Int32
        Public Declare Function BTICSDB_SchedLCM Lib "BTICSDB64.DLL" Alias "BTICSDB_SchedLCM" (ByVal a As Int32, ByVal b As Int32) As Int32
        Public Declare Function BTICSDB_SchedLogEx Lib "BTICSDB64.DLL" Alias "BTICSDB_SchedLogEx" (ByVal condition1 As UInt16, ByVal condition2 As UInt16, ByVal tagval As UInt16, ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTICSDB_SchedNop Lib "BTICSDB64.DLL" Alias "BTICSDB_SchedNop" (ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTICSDB_SchedPulse0 Lib "BTICSDB64.DLL" Alias "BTICSDB_SchedPulse0" (ByVal dionum As Int32, ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTICSDB_SchedPulse1 Lib "BTICSDB64.DLL" Alias "BTICSDB_SchedPulse1" (ByVal dionum As Int32, ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTICSDB_SchedUser Lib "BTICSDB64.DLL" Alias "BTICSDB_SchedUser" (ByVal useraddr As UInt32, ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTICSDB_TestProtocol Lib "BTICSDB64.DLL" Alias "BTICSDB_TestProtocol" (ByVal handleval As IntPtr) As Int32
    End Class
